App fetch and basic styles

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,11 @@
 .App {
   text-align: center;
 }
+.userList{
+  list-style: none;
+  display: flex;
+  justify-content: space-around;
+}
 
 .App-logo {
   height: 40vmin;
